--- a/pet-clinic-web/src/main/resources/templates/Owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/Owners/index.html
@@ -5,6 +5,22 @@
     <title>List of Pet Owners</title>
 </head>
 <body>
-     <h1 th:text="'List of Owners'"></h1>
+     <h1 th:text="'List of Owners'">Owners List</h1>
+        <table>
+            <thread>
+                <tr>
+                    <th>ID</th>
+                    <th>First Name</th>
+                    <th>Lat Name</th>
+                </tr>
+            </thread>
+            <tbody>
+            <tr th:each="owner : ${owners}">
+                <td th:text="${owner.id}">1</td>
+                <td th:text="${owner.firstName}">Joe</td>
+                <td th:text="${owner.lastName}">Buck</td>
+            </tr>
+            </tbody>
+        </table>
 </body>
 </html>
